[package]
name = "sui-macros"
version = "0.7.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
sui-proc-macros = { path = "../sui-proc-macros" }
once_cell = { version = "1.16", default-features = false, features = ["alloc"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tracing = { version = "0.1.36", default-features = false }
