cargo-features = ["profile-rustflags"]

[package]
name = "sui-types"
version = "0.1.1"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = { version = "1.0.52", default-features = false }
core2 = { version = "0.3", default_features = false, features = ["alloc"] }
once_cell = { version = "1.16", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive", "rc"] }
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
serde_json = { version = "1.0.88", default-features = false, features = ["alloc"] }
serde_with = { version = "2.1.0", default-features = false, features = ["alloc", "macros"] }
strum_macros = "^0.24"
indexmap = "^1.9.1"
base64ct = { version = "1.6.0", default-features = false, features = ["alloc"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
bs58 = { version = "0.4.0", default-features = false, features = ["alloc"] }
hashbrown = { version = "0.14.0" }

bcs = { git = "https://github.com/KeystoneHQ/bcs.git", tag = "0.1.1" }

move-core-types = { path = "../../external-crates/move/move-core/types", features = ["address32"] }

sui-macros = { path = "../sui-macros" }

[dev-dependencies]
bincode = "1.3.3"
criterion = { version = "0.4.0", features = ["async", "async_tokio"] }
proptest = "1.0.0"
proptest-derive = "0.3.0"
serde_yaml = "0.8.26"

[features]
test-utils = []
fuzzing = ["move-core-types/fuzzing"]
keystone-simulator = [
    "once_cell/default"
]


[profile.dev]
# Enable unstable features on nightly
# (requires nightly to be installed)
rustflags = ["-Z unstable-options"]
