[package]
name = "move-core-types"
version = "0.0.4"
authors = ["Diem Association <opensource@diem.com>"]
description = "Core types for Move"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = ["crates-io"]
edition = "2021"

[dependencies]
anyhow = { version = "1.0.52", default-features = false }
hex = "0.4.3"
once_cell = { version = "1.16", default-features = false, features = ["alloc"] }
proptest = { version = "1.0.0", default-features = false, optional = true }
proptest-derive = { version = "0.3.0", default-features = false, optional = true }
rand = "0.8.3"
ref-cast = "1.0.6"
serde = { version = "1.0.124", default-features = false, features = ["alloc", "derive", "rc"] }
serde_bytes = "0.11.5"
primitive-types = {version = "0.10.1", default-features = false, features = ["impl-serde"]}
uint = "0.9.4"
num = { version = "0.4.0", default-features = false, features = ["alloc"] }
ethnum = "1.0.4"
arbitrary = { version = "1.1.7", features = [ "derive_arbitrary"], optional = true }

bcs.workspace = true

[dev-dependencies]
proptest = "1.0.0"
proptest-derive = "0.3.0"
regex = "1.5.5"
serde_json = "1.0.64"
arbitrary = { version = "1.1.7", features = [ "derive_arbitrary"] }

[features]
address20 = []
address32 = []
default = []
fuzzing = ["proptest", "proptest-derive", "arbitrary"]
